--- a/study/react/live-cryptocurrency-react/.babelrc
+++ b/study/react/live-cryptocurrency-react/.babelrc
@@ -1,3 +1,4 @@
 {
-    "presets": ["@emotion/babel-preset-css-prop"]
+    "presets": ["@emotion/babel-preset-css-prop"],
+    "plugins": ["transform-react-pug", "transform-react-jsx" ]
 }
