--- a/study/react/live-cryptocurrency-react/package.json
+++ b/study/react/live-cryptocurrency-react/package.json
@@ -30,5 +30,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-transform-react-pug": "^7.0.1",
+    "eslint": "^6.0.1",
+    "eslint-plugin-react-pug": "^0.7.1",
+    "pug-as-jsx-loader": "^1.0.69"
+  }
 }
