--- a/study/react/live-cryptocurrency-react-pug-babel/package.json
+++ b/study/react/live-cryptocurrency-react-pug-babel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "live-cryptocurrency-react",
+  "name": "live-cryptocurrency-react-emotion",
   "version": "0.1.0",
   "homepage": ".",
   "private": true,
@@ -17,7 +17,7 @@
     "react-toastify": "^4.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=5050 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -30,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-transform-react-pug": "^7.0.1"
+  }
 }
