--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ exclude:
   - '/vendor/'
 
 # Site settings
-title: Centrarium
-subtitle: 'A simple yet classy theme for your Jekyll website or blog'
+title: vlueviolet's blog
+subtitle: ''
 email: blcentra@gmail.com
 name: Ben Centra
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  # A simple yet classy theme for your Jekyll website or blog.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
@@ -60,6 +60,9 @@ descriptions:
   - cat: dummy
     desc: 'Just some placeholder posts, lorem ipsum and the rest.'
 
+  - cat: vuejs
+    desc: 'posts related to vuejs'
+
 # Social icons and sharing options
 #
 # Social settings are used in two places:
@@ -76,117 +79,105 @@ descriptions:
 #     desc: Follow me on Twitter            # Description to display as link title, etc
 #     share: true                           # Include in the "Share" section of posts
 social:
-  - name: Twitter
-    icon: twitter
-    username: TheBenCentra
-    url: https://twitter.com/TheBenCentra
-    desc: Follow me on Twitter
-    share: true
+  # - name: Twitter
+  #   icon: twitter
+  #   username: TheBenCentra
+  #   url: https://twitter.com/TheBenCentra
+  #   desc: Follow me on Twitter
+  #   share: true
 
-  - name: Facebook
-    icon: facebook
-    username: thebencentra
-    url: ''
-    desc: Friend me on Facebook
-    share: true
+  # - name: Facebook
+  #   icon: facebook
+  #   username: thebencentra
+  #   url: ''
+  #   desc: Friend me on Facebook
+  #   share: true
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: vlueviolet
+    url: https://github.com/vlueviolet
     desc: Fork me on GitHub
-    share: false
-
-  - name: LinkedIn
-    icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
-    desc: Connect with me on LinkedIn
     share: true
 
-  - name: Google+
-    icon: google-plus
-    username: ''
-    url: ''
-    desc: Add me to your Circles
-    share: true
-
-  - name: YouTube
-    icon: youtube
-    username: ''
-    url: ''
-    desc: Subscribe on YouTube
-    share: false
-
-  - name: Instagram
-    icon: instagram
-    username: ''
-    url: ''
-    desc: Follow me on Instagram
-    share: false
-
-  - name: Pinterest
-    icon: pinterest
-    username: ''
-    url: ''
-    desc: Follow me on Pinterest
-    share: true
-
-  - name: SoundCloud
-    icon: soundcloud
-    username: ''
-    url: ''
-    desc: Follow me on SoundCloud
-    share: false
-
-  - name: Tumblr
-    icon: tumblr
-    username: ''
-    url: ''
-    desc: Follow me on Tumblr
-    share: false
-
-  - name: Steam
-    icon: steam
-    username: ''
-    url: ''
-    desc: Friend me on Steam
-    share: false
-
-  - name: Dribbble
-    icon: dribbble
-    username: ''
-    url: ''
-    desc: Follow me on Dribble
-    share: false
-
-  - name: Vimeo
-    icon: vimeo-square
-    username: ''
-    url: ''
-    desc: Follow me on Vimeo
-    share: false
-
-  - name: Vine
-    icon: vine
-    username: ''
-    url: ''
-    desc: Follow me on Vine
-    share: false
-
-  - name: Reddit
-    icon: reddit
-    username: ''
-    url: ''
-    desc: Share to Reddit
-    share: true
-
-  - name: 'Hacker News'
-    icon: hacker-news
-    username: ''
-    url: ''
-    desc: Share to Hacker News
-    share: false
+  # - name: LinkedIn
+  #   icon: linkedin
+  #   username: Ben Centra
+  #   url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+  #   desc: Connect with me on LinkedIn
+  #   share: true
+  # - name: Google+
+  #   icon: google-plus
+  #   username: ''
+  #   url: ''
+  #   desc: Add me to your Circles
+  #   share: true
+  # - name: YouTube
+  #   icon: youtube
+  #   username: ''
+  #   url: ''
+  #   desc: Subscribe on YouTube
+  #   share: false
+  # - name: Instagram
+  #   icon: instagram
+  #   username: ''
+  #   url: ''
+  #   desc: Follow me on Instagram
+  #   share: false
+  # - name: Pinterest
+  #   icon: pinterest
+  #   username: ''
+  #   url: ''
+  #   desc: Follow me on Pinterest
+  #   share: true
+  # - name: SoundCloud
+  #   icon: soundcloud
+  #   username: ''
+  #   url: ''
+  #   desc: Follow me on SoundCloud
+  #   share: false
+  # - name: Tumblr
+  #   icon: tumblr
+  #   username: ''
+  #   url: ''
+  #   desc: Follow me on Tumblr
+  #   share: false
+  # - name: Steam
+  #   icon: steam
+  #   username: ''
+  #   url: ''
+  #   desc: Friend me on Steam
+  #   share: false
+  # - name: Dribbble
+  #   icon: dribbble
+  #   username: ''
+  #   url: ''
+  #   desc: Follow me on Dribble
+  #   share: false
+  # - name: Vimeo
+  #   icon: vimeo-square
+  #   username: ''
+  #   url: ''
+  #   desc: Follow me on Vimeo
+  #   share: false
+  # - name: Vine
+  #   icon: vine
+  #   username: ''
+  #   url: ''
+  #   desc: Follow me on Vine
+  #   share: false
+  # - name: Reddit
+  #   icon: reddit
+  #   username: ''
+  #   url: ''
+  #   desc: Share to Reddit
+  #   share: true
+  # - name: 'Hacker News'
+  #   icon: hacker-news
+  #   username: ''
+  #   url: ''
+  #   desc: Share to Hacker News
+  #   share: false
 
 # Social sharing protocols
 # These are for automatically generating sharing metadata for FB and Twitter
@@ -199,6 +190,6 @@ protocols:
 
   twitter_image: '/assets/logo.png'
 
-  os_repo: 'https://github.com/bencentra/centrarium.com'
+  os_repo: 'https://github.com/vlueviolet'
   os_rcs_type: 'git'
-  os_src: 'git@github.com:bencentra/centrarium.com.git'
+  os_src: 'https://github.com/vlueviolet/vlueviolet.github.io.git'
