--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ exclude:
 # Site settings
 title: vlueviolet's blog
 subtitle: ''
-email: viva_dj@naver.com
-name: Dajung Choi
+email:
+name: vlueviolet
 description: >
   # A simple yet classy theme for your Jekyll website or blog.
 # Base URL of site (i.e. /blog). It should always start with a slash,
@@ -54,11 +54,11 @@ jekyll-archives:
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: jekyll
-    desc: 'Posts describing Jekyll setup techniques.'
+  # - cat: jekyll
+  #   desc: 'Posts describing Jekyll setup techniques.'
 
-  - cat: dummy
-    desc: 'Just some placeholder posts, lorem ipsum and the rest.'
+  # - cat: dummy
+  #   desc: 'Just some placeholder posts, lorem ipsum and the rest.'
 
   - cat: vuejs
     desc: 'posts related to vuejs'
