--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ exclude:
 # Site settings
 title: vlueviolet's blog
 subtitle: ''
-email:
+email: ''
 name: vlueviolet
 description: >
 # A simple yet classy theme for your Jekyll website or blog.
@@ -53,15 +53,15 @@ jekyll-archives:
 # ga_tracking_id: "UA-XXXX-1"
 
 # Category descriptions (for archive pages)
-descriptions:
+# descriptions:
   # - cat: jekyll
   #   desc: 'Posts describing Jekyll setup techniques.'
 
   # - cat: dummy
   #   desc: 'Just some placeholder posts, lorem ipsum and the rest.'
 
-  - cat: vuejs
-    desc: 'posts related to vuejs'
+  # - cat: vuejs
+  #   desc: 'posts related to vuejs'
 
 # Social icons and sharing options
 #
