--- a/study/storybook/package.json
+++ b/study/storybook/package.json
@@ -98,6 +98,7 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^6.0.28",
     "@storybook/addon-actions": "^6.0.28",
     "@storybook/addon-essentials": "^6.0.28",
     "@storybook/addon-links": "^6.0.28",
