--- a/study/storybook/package.json
+++ b/study/storybook/package.json
@@ -109,6 +109,7 @@
     "react-is": "^17.0.1",
     "sass-resources-loader": "^2.1.1",
     "storybook-icon-gallery": "^1.2.1",
+    "styled-components": "^5.2.1",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
     "url-loader": "^4.1.1"
