--- a/study/codelab/react-basic/package.json
+++ b/study/codelab/react-basic/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "nodemon",
+    "start": "node server.js",
+    "build": "next build"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
+    "styled-components": "^5.2.1"
   }
 }
