--- a/study/codelab/react-basic/package.json
+++ b/study/codelab/react-basic/package.json
@@ -8,16 +8,17 @@
     "build": "next build"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "next": "10.0.1",
+    "node-sass": "^5.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0",
+    "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
   }
 }
