:bulb: add file

--- a/study/storybook/package.json
+++ b/study/storybook/package.json
@@ -108,6 +108,7 @@
     "file-loader": "^6.2.0",
     "react-is": "^17.0.1",
     "sass-resources-loader": "^2.1.1",
+    "storybook-design-token": "^0.8.1",
     "storybook-icon-gallery": "^1.2.1",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.7",
