--- a/study/codelab/react-basic/package.json
+++ b/study/codelab/react-basic/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.21.0",
     "babel-plugin-styled-components": "^1.12.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
