--- a/study/codelab/react-basic/package.json
+++ b/study/codelab/react-basic/package.json
@@ -21,5 +21,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "next-redux-wrapper": "^6.0.2",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
