--- a/study/codelab/react-basic/package.json
+++ b/study/codelab/react-basic/package.json
@@ -23,9 +23,11 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^6.0.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
   }
 }
