--- a/study/storybook/package.json
+++ b/study/storybook/package.json
@@ -77,7 +77,8 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "storybook-to-ghpages --out=.out-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -103,6 +104,7 @@
     "@storybook/addon-essentials": "^6.1.2",
     "@storybook/addon-links": "^6.1.2",
     "@storybook/react": "^6.1.2",
+    "@storybook/storybook-deployer": "^2.8.7",
     "@svgr/webpack": "^5.4.0",
     "@types/classnames": "^2.2.11",
     "file-loader": "^6.2.0",
